gccida/c0/gen_split_1156
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1156/src/insn-emit.c:14285:43: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v7 = reverse_condition_maybe_unordered( ( rtx_code)( unsigned __int16)*( _DWORD *)new_op0); 
                                          ^~~~~~~~
                                          rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1156/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1156/src/insn-emit.c:14285:54: error: expected expression
v7 = reverse_condition_maybe_unordered( ( rtx_code)( unsigned __int16)*( _DWORD *)new_op0); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1156/src/insn-emit.c:14289:27: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v7 = reverse_condition( ( rtx_code)( unsigned __int16)*( _DWORD *)new_op0); 
                          ^~~~~~~~
                          rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1156/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1156/src/insn-emit.c:14289:38: error: expected expression
v7 = reverse_condition( ( rtx_code)( unsigned __int16)*( _DWORD *)new_op0); 
                                     ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1156/src/obj/insn-emit.o] Error 1
